--- a/blog-frontend/src/components/common/Header/Header.scss
+++ b/blog-frontend/src/components/common/Header/Header.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 
 .header {
-  background: $oc-blue-6;
+  background: $oc-grape-6;
   .header-content {
     height: 5rem;
     width: 1400px;
@@ -20,6 +20,9 @@
     @include media("<medium") {
       padding-left: 1rem;
       padding-right: 1rem;
+      .menu {
+        display: none;
+      }
     }
 
     .brand {
@@ -28,7 +31,19 @@
       font-size: 1.5rem;
       font-weight: 600;
     }
-
+    .menu {
+      // 메뉴 목록
+      color: white;
+      font-size: 1.3rem;
+      font-weight:600;
+      a {
+        padding-left: 0.8rem;
+        padding-right: 0.8rem;
+        &:hover {
+          color: $oc-gray-3;
+        }
+      }
+    }
     .right {
       // 우측 내용
       margin-left: auto;
