--- a/blog-frontend/src/components/common/NotFound/NotFound.scss
+++ b/blog-frontend/src/components/common/NotFound/NotFound.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 .not-found {
   height: 100vh;
-  background: $oc-blue-6;
+  background: $oc-grape-6;
   display: flex;
   align-items: center;
   justify-content: center;
