--- a/blog-frontend/src/components/editor/EditorHeader/EditorHeader.scss
+++ b/blog-frontend/src/components/editor/EditorHeader/EditorHeader.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 
 .editor-header {
-  background: $oc-blue-6;
+  background: $oc-grape-6;
   height: 4rem;
   padding-left: 1rem;
   padding-right: 1rem;
