--- a/blog-frontend/src/components/post/PostInfo/PostInfo.scss
+++ b/blog-frontend/src/components/post/PostInfo/PostInfo.scss
@@ -1,7 +1,7 @@
 @import 'utils';
 
 .post-info {
-  background: $oc-blue-6;
+  background: $oc-grape-6;
   height: 24rem;
   display: flex;
   align-items: center;
